css/mainpage.css
.inter-normal {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}

html,
body {
  max-width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  touch-action: none;
}

input,
textarea {
  touch-action: pan-y;
}

.add-task__window {
  position: absolute;
  width: 90vw;
  height: 80vh;
  padding: 1rem 1rem;
  top: 50%;
  left: 108%;
  transform: translateY(-50%);
  background: linear-gradient(90deg, #303059 0%, #6666bf 100%);
  border: 2px solid rgba(255, 255, 255, 0.5);
  box-shadow: 0px 0px 10px 3px #80b3ff;
  border-radius: 14px;
  z-index: 2;
  transition: transform 0.5s;
}
.add-task__window .new-task {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}
.add-task__window .new-task__title {
  width: 100%;
  margin-bottom: 1rem;
}
.add-task__window .new-task__title__label {
  display: block;
  padding: 0.5rem 0;
  padding-left: 0.5rem;
  margin-bottom: 0.3rem;
  font-size: 1.5rem;
  color: #fff;
}
.add-task__window .new-task__title__input {
  width: 100%;
  padding: 2rem 0;
  padding-left: 1.5rem;
  border-radius: 15px;
  border: 2px solid rgba(255, 255, 255, 0.5);
  font-size: 2rem;
  background-color: #121547;
  color: #fff;
  overflow: hidden;
}
.add-task__window .new-task__title__input::-moz-placeholder {
  color: rgba(255, 255, 255, 0.5);
}
.add-task__window .new-task__title__input::placeholder {
  color: rgba(255, 255, 255, 0.5);
}
.add-task__window .new-task__metadata {
  width: 100%;
  padding: 1rem 0;
  margin-bottom: 1rem;
  background: transparent;
  border: 2px solid rgba(255, 255, 255, 0.5);
  border-radius: 15px;
}
.add-task__window .new-task__metadata__importance {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 2rem;
  padding: 0 1.5rem;
}
.add-task__window .new-task__metadata__importance__p {
  color: #fff;
  font-size: 1.6rem;
}
.add-task__window .new-task__metadata__importance__checkbox {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 2px solid #000;
  cursor: pointer;
}
.add-task__window .new-task__metadata__importance__checkbox img {
  display: none;
  width: 100%;
  height: 100%;
}
.add-task__window .new-task__metadata__deadline {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 0 1.5rem;
  margin-bottom: 2rem;
}
.add-task__window .new-task__metadata__deadline__p {
  color: #fff;
  font-size: 1.6rem;
  align-content: center;
}
.add-task__window .new-task__metadata__deadline input[type=date] {
  position: relative;
  display: block;
  width: 40%;
  height: 100%;
  padding: 1.5rem 0.5rem;
  text-align: center;
  color: #fff;
  background-color: #121547;
  border-radius: 15px;
  border: none;
  overflow: hidden;
}
.add-task__window .new-task__metadata__deadline input[type=date]::-webkit-calendar-picker-indicator {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: auto;
  height: auto;
  background: transparent;
  color: transparent;
}
.add-task__window .new-task__description {
  width: 100%;
  flex: 1;
  margin-bottom: 2rem;
  touch-action: auto;
}
.add-task__window .new-task__description__textarea {
  width: 100%;
  height: 100%;
  padding: 1.5rem 1.5rem;
  background: #121547;
  border: 2px solid rgba(255, 255, 255, 0.5);
  border-radius: 15px;
  font-size: 2rem;
  color: #fff;
  resize: none;
  touch-action: auto;
}
.add-task__window .new-task__description__textarea::-moz-placeholder {
  color: rgba(255, 255, 255, 0.5);
}
.add-task__window .new-task__description__textarea::placeholder {
  color: rgba(255, 255, 255, 0.5);
}
.add-task__window .new-task__buttons {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  border-radius: 15px;
  margin-bottom: 2rem;
  cursor: pointer;
}
.add-task__window .new-task__buttons__button {
  display: block;
  width: 30%;
  padding: 1.5rem 0;
  border-radius: 15px;
  border: none;
  box-shadow: 0px 0px 6px #80b3ff;
  background: none;
}
.add-task__window .new-task__buttons__button .button-label {
  height: 100%;
  color: #fff;
  font-size: 1.5rem;
  text-align: center;
  padding: 0.2rem;
  align-content: center;
}
.add-task__window .new-task__buttons__button__close {
  background-color: #e14b3e;
}
.add-task__window .new-task__buttons__button__add-next {
  background-color: #adadad;
}
.add-task__window .new-task__buttons__button__insert {
  background-color: #73aa6e;
}
.add-task__window .new-task__state {
  width: 100%;
  padding: 2rem 0;
  padding-left: 0.5rem;
  color: #fff;
  font-size: 1.7rem;
  align-content: center;
}

.add-task__window__show {
  transform: translateX(-115%) translateY(-50%);
}

@media screen and (max-height: 568px) {
  .add-task__window {
    height: 95vh;
  }
  .add-task__window .new-task__metadata__deadline input[type=date] {
    width: 50%;
  }
}
body {
  position: relative;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background-color: #0b0b13;
}

.elipse {
  position: absolute;
  top: 0;
  left: 0;
  width: 260px;
  height: 200px;
  border-radius: 50% 50%;
  transform: translateX(-15%) translateY(-18%);
  background: linear-gradient(180deg, rgba(50, 50, 94, 0.15) 4.81%, rgba(155, 155, 253, 0.15) 82.69%);
  z-index: -1;
}

.shadow {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.6);
  opacity: 0;
  z-index: -1;
  transition: opacity 0.3s;
}

header {
  margin-bottom: 5rem;
}
header h1 {
  width: 80%;
  margin: 0 auto;
  padding-top: 3.3rem;
  font-family: "Poppins", sans-serif;
  font-style: italic;
  font-weight: 600;
  font-size: 6.5rem;
  color: #fff;
  text-align: center;
  letter-spacing: -1.224px;
}
header p {
  width: 90%;
  margin: 0 auto;
  text-align: center;
  color: #a1a1aa;
  font-family: "Inter", sans-serif;
  font-size: 2rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: -0.34px;
}

main {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 205px - 5vh);
  width: 100%;
}
main .wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
}
main .wrapper .search-bar {
  width: 90%;
  height: 54px;
  margin: 0 auto;
  background: linear-gradient(90deg, #303059 0%, #6666bf 100%);
  border-radius: 14px;
  margin-bottom: 2rem;
}
main .wrapper .search-bar__input {
  width: 100%;
  height: 100%;
  background: none;
  border: none;
  padding-left: 1rem;
  font-size: 2rem;
  color: #fff;
}
main .wrapper .task-selectors {
  width: 90%;
  margin: 0 auto;
  margin-bottom: 2rem;
  background: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
main .wrapper .task-selectors__box {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  width: 100%;
}
main .wrapper .task-selectors__box .task-selector__item {
  width: 30%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}
main .wrapper .task-selectors__box .task-selector__item__button {
  position: relative;
  width: 100%;
  padding: 2rem 1rem;
  display: flex;
  flex-direction: column;
  border-radius: 20px;
  background-color: #333;
  border: 2px solid #7c5cff;
  transition: background-color 0.3s;
}
main .wrapper .task-selectors__box .task-selector__item__button__switch {
  position: absolute;
  top: 50%;
  left: 0;
  width: 40%;
  height: 90%;
  border-radius: 20px;
  transform: translateY(-50%);
  background-color: #fff;
  transition: transform 0.5s, background-color 0.3s;
}
main .wrapper .task-selectors__box .task-selector__item__button .moved {
  transform: translateX(150%) translateY(-50%);
  background-color: rgba(255, 255, 255, 0.3);
}
main .wrapper .task-selectors__box .task-selector__item .active {
  background-color: #7fbd62;
}
main .wrapper .task-selectors__box .task-selector__item .disabled {
  opacity: 0.4;
}
main .wrapper .task-selectors__box .task-selector__item__description {
  width: 100%;
  font-size: 1.5rem;
  color: #a1a1aa;
  text-align: center;
}
main .wrapper .task-selectors__box .checking {
  display: none;
}
main .wrapper .task-selectors__box .removing {
  display: none;
}
main .wrapper .task-selectors .checking {
  justify-content: center;
}
main .wrapper .task-selectors .removing {
  justify-content: center;
}
main .wrapper .tasks-list {
  width: 90%;
  margin: 0 auto;
  flex: 1;
  display: block;
  overflow-y: scroll;
}
main .wrapper .tasks-list__element {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 70px;
  max-height: 70px;
  width: 100%;
  margin-bottom: 2rem;
  background-color: #fff;
  border-radius: 15px;
  background: linear-gradient(90deg, #303059 0%, #6666bf 100%);
}
main .wrapper .tasks-list__element__name {
  flex: 1;
  height: 70px;
  padding-left: 1.5rem;
  font-size: 1.5rem;
  color: #fff;
  line-height: 70px;
}
main .wrapper .tasks-list__element__status {
  padding: 0 1rem;
  height: 70px;
  align-content: center;
}
main .wrapper .tasks-list__element__status__icon {
  display: block;
  width: 25px;
  height: 25px;
}
main .wrapper .tasks-list__element__importance {
  padding: 0 1rem;
  height: 70px;
  align-content: center;
}
main .wrapper .tasks-list__element__importance__icon {
  display: block;
  width: 25px;
  height: 25px;
}
main .wrapper .tasks-list__element__checkbox {
  padding: 0 1rem;
  height: 70px;
  align-content: center;
  overflow: hidden;
}
main .wrapper .tasks-list__element__checkbox__icon-box {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  border: 2px solid #fff;
  overflow: hidden;
}
main .wrapper .tasks-list__element__checkbox__icon-box img {
  display: block;
  width: 100%;
  height: 100%;
  overflow: hidden;
  opacity: 0;
}
main .wrapper .tasks-list__element__checkbox__icon-box .checked {
  opacity: 1;
}
main .wrapper .tasks-list__empty {
  width: 80%;
  height: 50%;
  margin: 0 auto;
  font-size: 4rem;
  text-align: center;
  color: #a1a1aa;
  align-content: center;
  font-style: italic;
}
main .wrapper .selected-tasks-counter {
  width: 80%;
  margin: 0 auto;
  font-size: 1.8rem;
  color: #fff;
  text-align: center;
  padding: 0.5rem 0;
}
main .wrapper .task-managment-panels {
  width: 90%;
  margin: 0 auto;
  height: 10vh;
  align-content: center;
}
main .wrapper .task-managment-panels .task-managment-panel {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}
main .wrapper .task-managment-panels .task-managment-panel .task-manager {
  display: block;
  width: 45px;
  height: 45px;
  background: none;
  border: none;
  cursor: pointer;
}
main .wrapper .task-managment-panels .task-managment-panel .task-manager img {
  display: block;
  width: 100%;
  height: 100%;
}
main .wrapper .task-managment-panels .task-managment-panel.task-managment-panel__checking {
  display: none;
}
main .wrapper .task-managment-panels .task-managment-panel.task-managment-panel__removing {
  display: none;
}/*# sourceMappingURL=mainpage.css.map */

